2005-08-23  Youchen Lee  <youchen.lee@gmail.com>
	
	* src/nancy_bot/nancybot.cpp: Fixed an unexpected semicolon in
	NancyBot::askNancy().

2005-08-23  Youchen Lee  <youchen.lee@gmail.com>

	* src/Makefile.am,
	data/Makefile.am,
	src/nancy_bot/botutil.h,
	data/nancy_bot/default_usages.data,
	data/nancy_bot/example_usages.data: Divided utils for Nancy:
	replaceString() and trim(). Added data files for
	USE_USER_DEFINED_USAGES .

	* src/nancy_bot/api.h,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/nancybot.cpp: Added two functions
	MsgData::initUserDefinedUsages() and MsgData::getUserDefinedUsages().
	Replaced char with unsigned char. Several bugs fixed.


2005-08-23  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/api.h:
	Fixed that bot add all replies to unknow messages.
	Add "xxx = yyy" teaching. (#define TEACH_BOT).

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.h: Fixed an auto-learning mistake.

2005-08-22  Kanru Chen  <koster@debian.org.tw>

	* src/view/telnetview.cpp
	(CTelnetView::OnHyperlinkClicked):
	Disable parsing telnet:// in firefox plugin.

	* configure.ac:
	Bump release version to 0.3.1.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetview.cpp:
	Convert all '\n' characters to correct CR/LF before pasting text
	from the clipboard.
	This is just a workaround and should be fixed in the future.

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* data/nancy_bot/default_msg.data,
	data/nancy_bot/default.conf: Added more comments for user.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetview.cpp:
	Convert UTF-8 encoded text from clipboad to site-specific encoding.
	This can prevent the broken UTF-8 string caused by auto-wrap.
	This is just a workaround and should be fixed in the future.
